--- a/DirectoryBrowser/DirectoryBrowser.csproj
+++ b/DirectoryBrowser/DirectoryBrowser.csproj
@@ -63,6 +63,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DirectoryItem.cs" />
+    <Compile Include="FileSizeUtil.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
