Rename History panel to Recent & fix Recent path selection

--- a/DirectoryBrowser/DirectoryBrowser.csproj
+++ b/DirectoryBrowser/DirectoryBrowser.csproj
@@ -62,9 +62,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="DirectoryItem.cs" />
-    <Compile Include="FileSizeUtil.cs" />
-    <Compile Include="Model.cs" />
+    <Compile Include="Model\DirectoryItem.cs" />
+    <Compile Include="Util\FileSizeUtil.cs" />
+    <Compile Include="Model\Model.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -96,5 +96,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
