--- a/DirectoryBrowser/DirectoryBrowser.csproj
+++ b/DirectoryBrowser/DirectoryBrowser.csproj
@@ -62,9 +62,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Model\BrowserHistory.cs" />
     <Compile Include="Model\DirectoryItem.cs" />
     <Compile Include="Util\FileSizeUtil.cs" />
-    <Compile Include="Model\Model.cs" />
+    <Compile Include="Model\AppModel.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
